--- a/templates/index.html
+++ b/templates/index.html
@@ -226,7 +226,7 @@
                     <div class="product-action">
                         <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>
                         {% if recent_product.id in wishlists %}
-                        <a class="btn btn-outline-dark btn-square" href="{% url 'product_wishlists_page' recent_product.id %}"><i class="far fa-heart"></i><i class="far fa-heart"></i></a>
+                        <a class="btn btn-outline-dark btn-square" href="{% url 'product_wishlists_page' recent_product.id %}"><i class="fas fa-heart" style='color: red'></i></a>
                         {% else %}
                         <a class="btn btn-outline-dark btn-square" href="{% url 'product_wishlists_page' recent_product.id %}"><i class="far fa-heart"></i></a>
                         {% endif %}
