--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -192,7 +192,7 @@
                                 <a class="btn btn-outline-dark btn-square" href="{% url 'product_wishlists_page' product.id %}"><i class="far fa-heart"></i></a>
                                 {% endif %}
                                 <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>
-                                <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>
+                                <a class="btn btn-outline-dark btn-square" href="{% url 'product_detail_page' product.pk %}"><i class="fa fa-search"></i></a>
                             </div>
                         </div>
                         <div class="text-center py-4">
@@ -218,7 +218,7 @@
                         <ul class="pagination justify-content-center">
                             {% if page_obj.has_previous %}
                             <li class="page-item"><a class="page-link"
-                                                     href="?page={{ page_obj.previous_page_number }}" style="color: inherit">Previous</span></a>
+                                                     href="?page={{ page_obj.previous_page_number }}" style="color: inherit">Previous</a>
                             </li>
                             <li class="page-item">
                                 <a class="page-link" href="?page={{ page_obj.previous_page_number }}" style="color: inherit">{{ page_obj.previous_page_number }}</a>
