--- a/templates/wishlist/wishlist.html
+++ b/templates/wishlist/wishlist.html
@@ -95,7 +95,7 @@
                         <ul class="pagination justify-content-center">
                             {% if page_objects.has_previous %}
                             <li class="page-item"><a class="page-link"
-                                                     href="?page={{ page_objects.previous_page_number }}">Previous</span></a>
+                                                     href="?page={{ page_objects.previous_page_number }}">Previous</a>
                             </li>
                             <li class="page-item">
                                 <a class="page-link" href="?page={{ page_objects.previous_page_number }}">{{ page_objects.previous_page_number }}</a>
