--- a/templates/base.html
+++ b/templates/base.html
@@ -110,8 +110,6 @@
             <a href="" class="text-decoration-none">
                 {% if general.logo %}
                 <img src="{{ general.logo.url }}" width="150" height="100">
-                {% else %}
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpikbest.com%2Fso%2Fonline-shop-logo.html&psig=AOvVaw3YwVoKkhKpoEXK4-kntoYO&ust=1715421805660000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCKCX6qzqgoYDFQAAAAAdAAAAABAE">
                 {% endif %}
             </a>
             {% endfor %}
@@ -203,7 +201,7 @@
                             <span class="badge text-secondary border border-secondary rounded-circle"
                                   style="padding-bottom: 2px;">{{ wishlists.count }}</span>
                         </a>
-                        <a href="{% url 'shop_cart' %}" class="btn px-0 ml-3">
+                        <a href="{% url 'shop_coupon' %}" class="btn px-0 ml-3">
                             <i class="fas fa-shopping-cart text-primary"></i>
                             <span class="badge text-secondary border border-secondary rounded-circle"
                                   style="padding-bottom: 2px;">0</span>
