--- a/templates/base.html
+++ b/templates/base.html
@@ -147,28 +147,33 @@
                 <h6 class="text-dark m-0"><i class="fa fa-bars mr-2"></i>Categories</h6>
                 <i class="fa fa-angle-down text-dark"></i>
             </a>
-            <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 999;">
-                    <div class="navbar-nav w-100">
-                        {% for category in categories %}
-                            {% if category.sub_cat.count > 0 %}
-                                <div class="nav-item dropdown dropright">
-                                    <a href="main_category={{ category.pk }}" class="nav-link dropdown-toggle" data-toggle="dropdown">{{ category.name_uz }} <i class="fa fa-angle-right float-right mt-1"></i></a>
-                                        <div class="dropdown-menu position-absolute rounded-0 border-0 m-0">
-                                            {% for i in category.sub_cat.all %}
-                                                {% if request.session.selected_cat_id != i.pk %}
-                                                    <a href="{% url 'product-list' %}?sub_category={{ i.pk }}&query={{ request.session.query }}" class="dropdown-item">{{ i.name_uz }}</a>
-                                                {% else %}
-                                                    <a href="{% url 'product-list' %}?sub_category={{ i.pk }}&query={{ request.session.query }}" class="dropdown-item active" style="color: inherit;">{{ i.name_uz }}</a>
-                                                {% endif %}
-                                            {% endfor %}
-                                        </div>
-                                    </div>
-                                {% else %}
-                                <a href="" class="nav-item nav-link">{{ category.name_uz }}</a>
+            <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 bg-light"
+                 id="navbar-vertical" style="width: calc(100% - 30px); z-index: 999;">
+                <div class="navbar-nav w-100">
+                    {% for category in categories %}
+                    {% if category.sub_cat.count > 0 %}
+                    <div class="nav-item dropdown dropright">
+                        <a href="main_category={{ category.pk }}" class="nav-link dropdown-toggle"
+                           data-toggle="dropdown">{{ category.name_uz }} <i
+                                class="fa fa-angle-right float-right mt-1"></i></a>
+                        <div class="dropdown-menu position-absolute rounded-0 border-0 m-0">
+                            {% for i in category.sub_cat.all %}
+                            {% if request.session.selected_cat_id != i.pk %}
+                            <a href="{% url 'product-list' %}?sub_category={{ i.pk }}&query={{ request.session.query }}"
+                               class="dropdown-item">{{ i.name_uz }}</a>
+                            {% else %}
+                            <a href="{% url 'product-list' %}?sub_category={{ i.pk }}&query={{ request.session.query }}"
+                               class="dropdown-item active" style="color: inherit;">{{ i.name_uz }}</a>
                             {% endif %}
-                        {% endfor %}
+                            {% endfor %}
+                        </div>
                     </div>
-                </nav>
+                    {% else %}
+                    <a href="" class="nav-item nav-link">{{ category.name_uz }}</a>
+                    {% endif %}
+                    {% endfor %}
+                </div>
+            </nav>
         </div>
         <div class="col-lg-9">
             <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 py-lg-0 px-0">
@@ -204,7 +209,7 @@
                         <a href="{% url 'shop_coupon' %}" class="btn px-0 ml-3">
                             <i class="fas fa-shopping-cart text-primary"></i>
                             <span class="badge text-secondary border border-secondary rounded-circle"
-                                  style="padding-bottom: 2px;">0</span>
+                                  style="padding-bottom: 2px;">{{ cart_count }}</span>
                         </a>
                     </div>
                 </div>
@@ -288,6 +293,15 @@
                 by
                 <a class="text-primary" href="https://htmlcodex.com">HTML Codex</a>
             </p>
+        </div>
+        <div class="col-md-6 px-xl-0 text-center text-md-right">
+            {% for payment_method in pay_methods %}
+            {% if payment_method.logo %}
+            <img class="img-fluid" width="50" src="{{ payment_method.logo.url }}" alt="">
+            {% else %}
+            <img class="img-fluid" width="50" src="{% static 'no_photo.jpeg' %}" alt="">
+            {% endif %}
+            {% endfor %}
         </div>
     </div>
 </div>
