--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -21,122 +21,31 @@
     <div class="row px-xl-5">
         <!-- Shop Sidebar Start -->
         <div class="col-lg-3 col-md-4">
-            <!-- Price Start -->
-            <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Filter by price</span>
-            </h5>
-            <div class="bg-light p-4 mb-30">
-                <form>
+            <form method="GET">
+                {% csrf_token %}
+                {% for feature in features %}
+                <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Filter by {{ feature.name }}</span>
+                </h5>
+                <div class="bg-light p-4 mb-30">
+
                     <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                         <input type="checkbox" class="custom-control-input" checked id="price-all">
-                        <label class="custom-control-label" for="price-all">All Price</label>
+                        <label class="custom-control-label" for="price-all">All {{ feature.name }}</label>
                         <span class="badge border font-weight-normal">1000</span>
                     </div>
+                    {% for feature_value in feature.feature_value.all %}
                     <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="price-1">
-                        <label class="custom-control-label" for="price-1">$0 - $100</label>
-                        <span class="badge border font-weight-normal">150</span>
+                        <input {% if feature_value.pk in feature_values %}checked {% endif %} name="feature_values"
+                               value="{{ feature_value.pk }}" type="checkbox" class="custom-control-input"
+                               id="price-{{ feature_value.pk }}">
+                        <label class="custom-control-label" for="price-{{ feature_value.pk }}">{{ feature_value.value }}</label>
+                        <span class="badge border font-weight-normal">{{ feature_value.product_feature.count }}</span>
                     </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="price-2">
-                        <label class="custom-control-label" for="price-2">$100 - $200</label>
-                        <span class="badge border font-weight-normal">295</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="price-3">
-                        <label class="custom-control-label" for="price-3">$200 - $300</label>
-                        <span class="badge border font-weight-normal">246</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="price-4">
-                        <label class="custom-control-label" for="price-4">$300 - $400</label>
-                        <span class="badge border font-weight-normal">145</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
-                        <input type="checkbox" class="custom-control-input" id="price-5">
-                        <label class="custom-control-label" for="price-5">$400 - $500</label>
-                        <span class="badge border font-weight-normal">168</span>
-                    </div>
-                </form>
-            </div>
-            <!-- Price End -->
+                    {% endfor %}
+                </div>
+                {% endfor %}
+            </form>
 
-            <!-- Color Start -->
-            <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Filter by color</span>
-            </h5>
-            <div class="bg-light p-4 mb-30">
-                <form>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" checked id="color-all">
-                        <label class="custom-control-label" for="price-all">All Color</label>
-                        <span class="badge border font-weight-normal">1000</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="color-1">
-                        <label class="custom-control-label" for="color-1">Black</label>
-                        <span class="badge border font-weight-normal">150</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="color-2">
-                        <label class="custom-control-label" for="color-2">White</label>
-                        <span class="badge border font-weight-normal">295</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="color-3">
-                        <label class="custom-control-label" for="color-3">Red</label>
-                        <span class="badge border font-weight-normal">246</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="color-4">
-                        <label class="custom-control-label" for="color-4">Blue</label>
-                        <span class="badge border font-weight-normal">145</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
-                        <input type="checkbox" class="custom-control-input" id="color-5">
-                        <label class="custom-control-label" for="color-5">Green</label>
-                        <span class="badge border font-weight-normal">168</span>
-                    </div>
-                </form>
-            </div>
-            <!-- Color End -->
-
-            <!-- Size Start -->
-            <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Filter by size</span>
-            </h5>
-            <div class="bg-light p-4 mb-30">
-                <form>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" checked id="size-all">
-                        <label class="custom-control-label" for="size-all">All Size</label>
-                        <span class="badge border font-weight-normal">1000</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="size-1">
-                        <label class="custom-control-label" for="size-1">XS</label>
-                        <span class="badge border font-weight-normal">150</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="size-2">
-                        <label class="custom-control-label" for="size-2">S</label>
-                        <span class="badge border font-weight-normal">295</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="size-3">
-                        <label class="custom-control-label" for="size-3">M</label>
-                        <span class="badge border font-weight-normal">246</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="size-4">
-                        <label class="custom-control-label" for="size-4">L</label>
-                        <span class="badge border font-weight-normal">145</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
-                        <input type="checkbox" class="custom-control-input" id="size-5">
-                        <label class="custom-control-label" for="size-5">XL</label>
-                        <span class="badge border font-weight-normal">168</span>
-                    </div>
-                </form>
-            </div>
-            <!-- Size End -->
         </div>
         <!-- Shop Sidebar End -->
 
@@ -187,12 +96,16 @@
                                 <a class="btn btn-outline-dark btn-square" href=""><i
                                         class="fa fa-shopping-cart"></i></a>
                                 {% if product.id in wishlists %}
-                                <a class="btn btn-outline-dark btn-square" href="{% url 'product_wishlists_page' product.id %}"><i class="fas fa-heart" style='color: #9400D3'></i></a>
+                                <a class="btn btn-outline-dark btn-square"
+                                   href="{% url 'product_wishlists_page' product.id %}"><i class="fas fa-heart"
+                                                                                           style='color: #9400D3'></i></a>
                                 {% else %}
-                                <a class="btn btn-outline-dark btn-square" href="{% url 'product_wishlists_page' product.id %}"><i class="far fa-heart"></i></a>
+                                <a class="btn btn-outline-dark btn-square"
+                                   href="{% url 'product_wishlists_page' product.id %}"><i class="far fa-heart"></i></a>
                                 {% endif %}
                                 <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>
-                                <a class="btn btn-outline-dark btn-square" href="{% url 'product_detail_page' product.pk %}"><i class="fa fa-search"></i></a>
+                                <a class="btn btn-outline-dark btn-square"
+                                   href="{% url 'product_detail_page' product.pk %}"><i class="fa fa-search"></i></a>
                             </div>
                         </div>
                         <div class="text-center py-4">
@@ -218,23 +131,28 @@
                         <ul class="pagination justify-content-center">
                             {% if page_obj.has_previous %}
                             <li class="page-item"><a class="page-link"
-                                                     href="?page={{ page_obj.previous_page_number }}" style="color: inherit">Previous</a>
+                                                     href="?page={{ page_obj.previous_page_number }}"
+                                                     style="color: inherit">Previous</a>
                             </li>
                             <li class="page-item">
-                                <a class="page-link" href="?page={{ page_obj.previous_page_number }}" style="color: inherit">{{ page_obj.previous_page_number }}</a>
+                                <a class="page-link" href="?page={{ page_obj.previous_page_number }}"
+                                   style="color: inherit">{{ page_obj.previous_page_number }}</a>
                             </li>
 
                             {% endif %}
 
                             <li class="page-item active">
-                                <a class="page-link" href="?page={{ num }}" style="color: inherit">{{ page_obj.number }}</a>
+                                <a class="page-link" href="?page={{ num }}" style="color: inherit">{{ page_obj.number
+                                    }}</a>
                             </li>
 
                             {% if page_obj.has_next %}
                             <li class="page-item">
-                                <a class="page-link" href="?page={{ page_obj.next_page_number }}" style="color: inherit">{{ page_obj.next_page_number }}</a>
+                                <a class="page-link" href="?page={{ page_obj.next_page_number }}"
+                                   style="color: inherit">{{ page_obj.next_page_number }}</a>
                             </li>
-                            <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}" style="color: inherit">Next</a>
+                            <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}"
+                                                     style="color: inherit">Next</a>
                             </li>
                             {% endif %}
                         </ul>
