--- a/templates/register_login/login.html
+++ b/templates/register_login/login.html
@@ -12,6 +12,9 @@
     <h2>Login Page</h2>
     <form action="{% url 'login-page' %}" method="POST">
         {% csrf_token %}
+
+        <input type="hidden" name="next" value="{{ request.GET.next }}">
+
         <div class="input-box">
             <input type="email" name="email" placeholder="Enter your email" required>
         </div>
